syntax = "proto3";
option go_package = "github.com/Vetusq/gRPCserver/invoicer";

service Greeter {
    rpc GetBalance (RequestWalletInfo) returns (ResponceBalanceNonce) {}
  }
  
  message RequestWalletInfo {
    string address = 1;
  }
  
  message ResponceBalanceNonce {
    int64 balance = 1;
    uint64 nonce = 2;
  }
